<resources>
    <string name="app_name">AR Bay Campus Interest App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ar_bay_campus_interest_app">AR Bay Campus Interest App</string>
    <string name="howto">HowTo</string>
    <string name="nav_2d_map">Map</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="title_activity_ar_view">ArView</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_view">826488@swansea.ac.uk</string>
    <string name="number_view">07123456789</string>
    <string name="fit_image_to_scan">Fit image to scan</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaflet_test_text_view">Test</string>
    <string name="main_buildings">Main buildings</string>
    <string name="main_lecture_theatres">Main lecture theatres</string>
    <string name="study_spaces">Study spaces</string>
    <string name="food_outlets">Food outlets</string>
    <string name="shops">Shops</string>
    <string name="ar_directions">AR Directions</string>
    <string name="room2">Room2</string>
    <string name="room3">Room3</string>
    <string name="room7">Room7</string>
    <string name="room6">Room6</string>
    <string name="room5">Room5</string>
    <string name="room4">Room4</string>
    <string name="room1">Room1</string>
    <string name="i_like_to_view">I\'d like to…</string>
    <string name="explore_text_view">Explore!</string>
    <string name="explore_img_view">TODO</string>
    <string name="explore_button">Explore</string>
    <string name="play_button">Play</string>
    <string name="find_view">Find…</string>
    <string name="string_find_view">Find…</string>
    <string name="ar_scan">AR Scan</string>
    <string name="scan_button">Scan</string>
    <string name="ar_mode">AR Mode</string>
    <string name="play">Play</string>
    <string name="scan_sign">Scan Sign</string>
    <string name="floor_plans">Floor Plans</string>
    <string name="floor_0">Floor 0</string>
    <string name="cofo_floor_plans">CoFo floor plans:</string>
    <string name="point_the_camera_towards_the_floor_and_move_it_around_once_your_device_has_detected_the_floor_tap_your_screen_to_see_the_study_spaces">Point the camera towards the ground and move it around. Once your device has detected the ground, tap your screen to see the study spaces!</string>
    <string name="instructions_view">To see floor plans, use your device to scan the ground. Once the ground has been detected tap your screen to see the plans for your selected floor!</string>
    <string name="floor_1">FLOOR 1</string>
    <string name="floor_4">FLOOR 4</string>
    <string name="floor_3">FLOOR 3</string>
    <string name="floor_2">FLOOR 2</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="content_coming_soon">Content coming soon!</string>
</resources>
