<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_how_to"
            android:layout_height="match_parent"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/howto" />
        <item
            android:id="@+id/nav_2d_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/nav_2d_map" />
        <item
            android:id="@+id/nav_ar_view"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/ar_scan" />
        <item
            android:id="@+id/nav_ar_directions"
            android:icon="@android:drawable/arrow_up_float"
            android:title="@string/play"
            tools:icon="@android:drawable/arrow_up_float" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item
        android:id="@+id/menu_more"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
