<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FloorPlansActivity">

    <LinearLayout
        android:id="@+id/LL_CoFo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_view" />

        <TextView
            android:id="@+id/CoFo_floors_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cofo_floor_plans"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_floor0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/floor_0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_floor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/floor_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_floor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/floor_2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_floor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/floor_3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_floor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/floor_4"
            android:textSize="30sp" />

    </LinearLayout>

</RelativeLayout>